# symbeon-ecosystem

./: .gitignore  COMO_FAZER_PUSH.txt  CONTRIBUTING.md  LICENSE  PUSH_INSTRUCTIONS.md  README.md  REORGANIZACAO_VISUAL.txt  STATUS.md  SUMMARY.md  docker-compose.yml  package-lock.json  package.json  vercel.json
backend/python-services/: requirements.txt
backend/rust-core/: Cargo.toml
backend/rust-core/api-gateway/: Cargo.toml
backend/rust-core/api-gateway/src/: error.rs  lib.rs  main.rs  state.rs
backend/rust-core/api-gateway/src/routes/: assistant.rs  auth.rs  certification.rs  funnel.rs  mod.rs  payments.rs
backend/rust-core/blockchain-bridge/: Cargo.toml
backend/rust-core/certification-engine/: Cargo.toml
backend/rust-core/payment-processor/: Cargo.toml
database/migrations/: 001_initial_schema.sql
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  NEXT_STEPS.md  QUICKSTART.md
docs/branding/: ALINHAMENTO_ESTETICO_COMPLETO.md  BRANDBOOK.md  COMPARACAO_SYMBEON_TECH.md  ESTILO_HACKER_MODERNO_IMPLEMENTADO.md  IMPLEMENTACAO_EFEITOS_NYO.md  MARKETPLACE_E_AUTH_IMPLEMENTADOS.md
docs/deploy/: CHECKLIST_DEPLOY_POLYGON.md  CONFIGURAR_DNS_LOCAWEB.md  CONFIGURAR_EMAIL_PROFISSIONAL.md  DEPLOYMENT_READINESS_CHECKLIST.md  GUIA_DEPLOY_POLYGON_MAINNET.md  GUIA_PUBLICACAO_HUGGING_FACE.md  PASSO_A_PASSO_DEPLOY.md  RESUMO_BRIDGE_IMPOSSIVEL.md
docs/monetization/: ESTRATEGIA_CERTIFICACAO_ETICA.md  ESTRATEGIA_DISTRIBUICAO_LICENCIAMENTO.md  PLANO_ACAO_CAPTACAO.md  PLANO_MONETIZACAO_BLOCKCHAIN.md  POSICIONAMENTO_CERTIFICACAO_ETICA.md  RENOMEACAO_SYMBEON.md  RESUMO_REVISAO_MONETIZACAO.md  VIABILIDADE_LICENCIAMENTO_ETICO.md
docs/operations/: ESTRUTURA_APRESENTACAO_INVESTIMENTO.md  ESTRUTURA_FINAL_REPOSITORIOS.md  PLANO_ACAO_IMEDIATA.md  PLANO_IMPLEMENTACAO_SYMBEON_ECOSYSTEM.md
docs/product/: ANALISE_ESTRATEGICA_DEPLOY.md  ANALISE_FINAL_DOCUMENTACAO.md  FINALIZACAO_SITE_SHOWCASE.md  MUDANCAS_MANIFESTO_PROOF_MARKETPLACE.md  RESUMO_MELHORIAS_IMPLEMENTADAS.md  RESUMO_SESSAO_FINAL.md  SYMBEON_ECOSYSTEM_LIVE.md
frontend/symbeon-showcase/: README.md  (+13 more)
smart-contracts/: hardhat.config.js  package.json
(+54 files in other folders)
