[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }

# Local dependencies
auth-service = { path = "../auth-service" }
blockchain-bridge = { path = "../blockchain-bridge" }
payment-processor = { path = "../payment-processor" }
certification-engine = { path = "../certification-engine" }
